[gd_scene load_steps=3 format=3 uid="uid://bjywlmyjoyd62"]

[ext_resource type="Script" path="res://Descarte/Tentativa 1/Script/Tela.gd" id="1_nvn7d"]
[ext_resource type="PackedScene" uid="uid://bderd611c4wkj" path="res://Descarte/Tentativa 1/Cena/Matriz.tscn" id="2_dv04c"]

[node name="Tela" type="Node2D"]
script = ExtResource("1_nvn7d")

[node name="Matriz" parent="." instance=ExtResource("2_dv04c")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Matriz2" parent="." instance=ExtResource("2_dv04c")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rotation = 1.0472

[node name="Matriz3" parent="." instance=ExtResource("2_dv04c")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rotation = 2.0944

[node name="Matriz4" parent="." instance=ExtResource("2_dv04c")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159

[node name="Matriz5" parent="." instance=ExtResource("2_dv04c")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rotation = 4.18879

[node name="Matriz6" parent="." instance=ExtResource("2_dv04c")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rotation = 5.23599

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
